--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
@@ -1,11 +1,12 @@
-﻿<div class="card card-exame">
+﻿@model ui.portal.jenn.ViewModel.PesquisaViewModel
+<div class="card card-exame">
     <div class="row">
         <div class="col-xl-3 col-md-6 col-12">
             <img src="~/img/exames/imagem.jpg" alt="" width="400" height="232" />
         </div>
         <div class="col-xl-6 col-md-6 col-12">
-            <h3>Laboratório CML <img src="~/img/icon-check.png" /> </h3>
-            <p>Análises clínicas, testes genéticos, check-up e Imagem</p>
+            <h3>@Model.NomeEmpresa <img src="~/img/icon-check.png" /> </h3>
+            <p>@Model.DescricaoProcedimento</p>
             <div class="rating">
                 <fieldset class="rating">
                     <span>
@@ -22,19 +23,19 @@
                         <input type="radio" id="rating_5" name="rating" value="5" />
                     </span>
                 </fieldset>
-                <a href="">106 opniões</a>
+                <a href="">@Model.Opiniao opiniões</a>
             </div>
             <div class="info">
                 <div class="ico">
                     <img src="~/img/exames/icon-loc.png" />
                 </div>
                 <div class="content-info">
-                    <h4>UNIDADE CERÂMICA</h4>
-                    <p>Rua Walter Figueira, 234 - Espaço Cerâmica, São Caetano do Sul. <a href="" target="_blank">Mapa</a></p>
+                    <h4>@Model.NomeUnidade</h4>
+                    <p>@Model.EnderecoCompleto <a href="" target="_blank">Mapa</a></p>
                 </div>
             </div>
             <div class="btn-content">
-                <a href="" class="btn btn-primary" title="">Ver preço</a>
+                <a href="@Model.EnderecoLoja" class="btn btn-primary" title="">Ver preço</a>
                 <a href="" class="btn btn-primary btn-convenio" title="">CONVÊNIOS</a>
                 <div class="box-convenios">
                     <form>
@@ -46,7 +47,6 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
 
