--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
@@ -1,14 +1,18 @@
-﻿
+﻿  @model IEnumerable<ui.portal.jenn.ViewModel.TipoProcedimentoViewModel>
+ 
+
+
 <div class="col-xl-12 col-lg-12 col-md-12">
     <div class="links">
-        <a href="" title="">Check-up</a>
-        <a href="" title="">Ultrassom</a>
-        <a href="" title="">Tomografia</a>
-        <a href="" title="">Raio X</a>
-        <a href="" title="">Testes Genéticos</a>
-        <a href="" title="">Exames cardiológicos</a>
-        <a href="" title="">Exame toxicológico</a>
-        <a href="" title="">Exames Oftalmológicos</a>
+
+        @if (Model.Any())
+        {
+            @foreach (var item in Model)
+            {
+                <a href="" title="">@item.Nome</a>
+            }
+        }
+
 
     </div>
 </div>
