--- a/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
@@ -95,7 +95,7 @@
                                             </div>
                                         </form>
                                         <div class="col-xl-12 col-lg-12 col-md-12">
-                                            @await Component.InvokeAsync("ListaTipoProcedimento")
+                                            @await Component.InvokeAsync("ListaTipoProcedimento", Model.tipoProcedimentoViewModels)
                                         </div>
                                     </div>
 
