--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaTipoProcedimento/Default.cshtml
@@ -9,7 +9,7 @@
         {
             @foreach (var item in Model)
             {
-                <a href="" title="">@item.Nome</a>
+                <a href="/Produtos/ListaTipoProduto?TipoProduto=@item.Nome" title="">@item.Nome</a>
             }
         }
 
