--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -123,39 +123,7 @@
                         <div class="item-select">
                             <span>Bairros</span>
                         </div>
-                        <div class="content-select">
-                            <div class="search">
-                                <input type="text" placeholder="Pesquisar" />
-                            </div>
-                            <div class="list-check">
-                                <div class="content-list">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck1">
-                                        Default checkbox
-                                    </label>
-                                </div>
-                                <div class="content-list">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck1">
-                                        Default checkbox
-                                    </label>
-                                </div>
-                                <div class="content-list">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck1">
-                                        Default checkbox
-                                    </label>
-                                </div>
-                                <div class="action-list">
-                                    <a href="" class="link">
-                                        Cancelar
-                                    </a>
-                                    <a href="" class="btn btn-secondary">
-                                        Aplique(22)
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                        @await Component.InvokeAsync("Bairros")
                     </div>
                     <div class="col-select">
                         <div class="item-select">
@@ -323,7 +291,7 @@
                     <div class="row">
                         @RenderBody()
                     </div>
-                 </div>
+                </div>
             </main>
         </section>
     </main>
@@ -399,4 +367,3 @@
 </body>
 </html>
 
- 
