--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -288,7 +288,7 @@
 
             <main role="main" class="pb-3">
                 <div class="col-12">
-                    <div class="row">
+                    <div id="parcialpesquisa" class="row">
                         @RenderBody()
                     </div>
                 </div>
