--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/Pagamentos/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/Pagamentos/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="content-select">
     <div class="search">
-        <input onkeyup="pesquisar('pesquisabairro', 'checkbairro_','data-bairro')" id="pesquisabairro" type="text" placeholder="Pesquisar" />
+        <input onkeyup="pesquisar('pesquisapagamento', 'checkpagamento_','data-pagamento')" id="pesquisapagamento" type="text" placeholder="Pesquisar" />
     </div>
     <div class="list-check">
         @if (Model.Any())
@@ -11,7 +11,7 @@
             @foreach (var item in Model)
             {
                 <div class="content-list">
-                    <input onclick="apliqueCount('checkbairro_','apliqueBairro')" id="checkbairro_@i" class="form-check-input" type="checkbox" value="" data-bairro="@item.ToLower()">
+                    <input onclick="apliqueCount('checkpagamento_','apliquepagamento')" id="checkpagamento_@i" class="form-check-input" type="checkbox" value="" data-pagamento="@item.ToLower()">
                     <label class="form-check-label" for="defaultCheck1">
                         @item
                     </label>
@@ -23,7 +23,7 @@
                 <a href="" class="link">
                     Cancelar
                 </a>
-                <a onclick="buscarBairros()" id="apliqueBairro" class="btn btn-secondary">
+                <a onclick="buscarporpagamentos()" id="apliquepagamento" class="btn btn-secondary">
                     Aplique(0)
                 </a>
             </div>
@@ -31,5 +31,7 @@
     </div>
 </div>
 
+
 <script src="/js/general.js"></script>
-<script src="/js/bairros.js"></script>
+<script src="/js/pagamentos.js"></script>
+
